--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,13 @@
     <canvas class="webgl"></canvas>
 
     <div class="menue">
-        <div class="button" id="bullButton">Bull</div>
-        <div class="button" id="whaleButton">Whale</div>
-        <div class="button" id="birdButton">Bird</div>
+<form action = "">
+<input type = "text" name = "message" id = "message">
+<button type="submit">send</button>
+    </form>
+    <div id = "chat-log"></div>
+    </main>
+	
 
 
     </div>
